--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.16",
+    "@next/env": "^14.2.3",
     "@tanstack/react-query": "^5.32.0",
     "axios": "^1.6.8",
     "country-flag-emoji": "^1.0.3",
